added home button functionality

--- a/app/assets/stylesheets/rpg.css.scss
+++ b/app/assets/stylesheets/rpg.css.scss
@@ -104,3 +104,11 @@
 	box-shadow:10px 10px 5px #888888;
 	border-radius: 15px;
 }
+#ret {
+	margin-top: 20px;
+	margin-left: 300px;
+}
+#return{
+	
+	font-size: 30px;
+}
