--- a/app/views/rpg/index.html.erb
+++ b/app/views/rpg/index.html.erb
@@ -65,6 +65,7 @@
 				<input id="restartbtn" class="btn" type="submit" value="Restart">
 			</form>
 		</div>
+		<div id = 'ret'><a href="http://hidden-fjord-3664.herokuapp.com"><button id='return' class= 'btn'>Return to Home Page</button></a></div>
 	</div>
 </body>
 </html>
